2004-10-28  Richard van den Berg  <richard@vdberg.org>
	* Removed config.h.in
	* Added ISO C99 compliant snprintf for systems that do not have it

2004-10-26  Richard van den Berg  <richard@vdberg.org>
	* Added check for ISO C99 compliant vsnprintf to configure.in

2004-10-23  Richard van den Berg  <richard@vdberg.org>
	* Applied PSQL patch from Marc Giger <gigerstyle@gmx.ch>
	* Set version to "Post 0.10"
	* Removed aide.1 and aide.1.ru since they are created by configure
	* Moved #endif for WITH_MHASH in commandconf.c thanks to berkeley@octagon.com.au

2003-12-08  Richard van den Berg  <richard@vdberg.org>
	* Applied patch 853842 "sshaide - contributed script"
	* Applied patch 855639 "Updated README file"

2003-12-02  Richard van den Berg  <richard@vdberg.org>
	* Fixed bug 851671 Aide-0.10 --config-check dumps core

2003-11-28  Richard van den Berg  <richard@vdberg.org>
	* Released aide version 0.10
	* Applied patch 849857 "cosmetic report fix" thanks to John Kristoff

2003-11-25  Mike Markley  <mike@markley.org>
	* Applied patch from bug 848664 "crash in db_input_wrapper (gzip)" thanks to Matt Kettler

2003-11-04  Richard van den Berg  <richard@vdberg.org>

	* Fixed typo in compare_db.c, closes bug 836255 thanks to Michael Schwendt
	* Applied patch 801860, fixes bug 801857 "=/$ gives segfault" thanks to Michael Schwendt
	* Applied patch 803001 "Fix for some memory leaks" thanks to Michael Schwendt
	* Applied patch 801853 "getopt optstring is wrong" thanks to Michael Schwendt

2003-10-03  Richard van den Berg  <richard@vdberg.org>

	* Moved project over to http://sf.net/projects/aide
	* Fixed problems in conf_yacc.y
	* Gzip code now uses best (-9) compression

2002-07-22  Rami Lehti  <Rami.Lehti@Finland.Sun.COM>

	* Fixed Unimplemented error message when conf md not compiled in
	* Fixed error message about nonexistant files.
	* Fixed --with-extra-includes --with-extra-libs handling (I hope)
	* Fixed *stat handling
